<resources>
    <string name="app_name">FirstApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_fotbal">Fotbal</string>
    <string name="menu_baschet">Baschet</string>
    <string name="menu_volei">Volei</string>
    <string name="bine_ai_venit">Bine ai venit,</string>
    <string name="sport_deck">SportDeck</string>
    <string name="account">Don\'t have an account? Sign up!</string>
    <string name="email">Email</string>
    <string name="retype_pass">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="problem">Tell us about your problem:</string>
    <string name="send">Send</string>
    <string name="google_maps_API">AIzaSyCfo_PoDasfH4ibvK3yRuQc-plK92YxIYw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alege_sector">Alegeti sectorul</string>
    <string name="remember_me">Remember me</string>
    <string name="menu_handbal">Handbal</string>
    <string name="menu_tenis">Tenis</string>
    <string name="nume">Nume</string>
    <string name="adresa">Adresa</string>
    <string name="rezerva_teren">Inchiriaza teren</string>
    <string name="pret">Pret</string>
    <string name="zi">Apasati pentru a selecta data pentru rezervare!</string>
    <string name="ore_disponibile">Ore disponibile</string>
    <string name="pret_timpul_sapt">timpul saptamanii</string>
    <string name="pret_weekend">weekend</string>
    <string name="perioada">perioada</string>
    <string name="inchiriaza">Inchiriaza teren</string>
    <string name="teren_acoperit">acoperit</string>
    <string name="teren_aer_liber">aer liber</string>
    <string name="tip_teren">Alegeti tip teren</string>
    <string name="profil">Profil</string>
    <string name="sporturi">Sporturi</string>
    <string name="profilPersonal">Profil personal</string>
    <string name="menu_profil">Profil</string>
    <string name="data">Alegeti data</string>
    <string-array name="sectoare">
        <item>Toate</item>
        <item>Sector 1</item>
        <item>Sector 2</item>
        <item>Sector 3</item>
        <item>Sector 4</item>
        <item>Sector 5</item>
        <item>Sector 6</item>
    </string-array>
    <string name="ore">Ore</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="rezervari_active">Rezervari active</string>
    <string name="rezervari_anulate">Rezervari anulate</string>
    <string name="rezervari_onorate">Rezervari onorate</string>
    <string name="anuleaza_rezervare">Anuleaza rezervarea</string>
    <string name="data_rezervare">Data rezervare</string>
    <string name="rezervari_trecute">Rezervari trecute</string>
    <string name="anulat">Rezervare anulata</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="imagineTeren">Poza teren</string>
    <string name="rezervare_expirata">Rezervare expirata</string>
    <string name="nu_exista_rezervari_active">Nu exista rezervari active!</string>
    <string name="nu_exista_rezervari_anulate">Nu ati anulat nicio rezervare!</string>
    <string name="nu_exista_rezervari_trecute">Nu aveti nicio rezervare in trecut!</string>
    <string name="catreMaps">Navigheaza</string>
    <string name="notaParola">Nota: parola trebuie sa aiba minim 8 caractere!</string>
    <string name="reguli">Reguli de joc</string>
    <string name="reguliTenis">Pentru a intelege mai bine regulile tenisului de camp, in primul rand trebuie sa te familiarizezi cu termenii folositi, putand astfel sa urmaresti mai usor, fiind si primele lectii de la un club.

 – punct: se foloseste pentru a numara in cadrul unei partide de tenis, fiind o unitate de baza, si se intinde de cand se pune mingea in joc, pana la prima greseala a unuia dintre participanti.

 – ghem (game): este tot o unitate de masura, folosit pentru tine scorul, se refera la joc;

 – brec (break): se refera la ghemul obtinut atunci cand serveste adversarul;

 – egalitate: cand sunt rezultate egale si jucatorul trebuie sa castige doua puncte consecutive pentru a castiga ghemul;

 – avantaj: poate fi la serviciu, cand cel care castiga punctul la 40 – 40 este cel care serveste, sau la primire, cand castiga punctul pe serva celuilalt;

 – tie break: este un sistem de punctare, ce se foloseste la scorul de 6 – 6, pentru a elimina prelungirile. Acest ghem de tiebreak are ca scop obtinerea a 7 puncte, cu doua avans.

 – dubla greseala: se considera atunci cand jucatorul greseste ambele serve.

 – afara (out): este momentul in care mingea iese in afara terenului de joc.
    Un meci de tenis cuprinde seturi a cate sase ghem-uri. La final, se joaca si un tie break, ce are 12 puncte. Se pot juca 3 sau 5 seturi si nu exista un termen limita, durata fiind variabila.

Cel care castiga primul la sase ghem-uri, la o diferenta de minim 2 puncte, va fi considerat castigator. In caz ca jucatorii sunt la egalitate, se trece la tie break pentru departajare.

Cum se tine un scor tenis? Pentru un joc standard ai: nici un punct echivalent cu 0; primul punct obtinut se noteaza cu 15; al doilea este notat cu 30; cel de-al treilea acumuleaza 40; al patrulea este considerat game, la o diferenta de minim 2 puncte.

Urmarind aceste reguli tenis, vei afla cum se tine scorul si cum se procedeaza in situatii de egalitate. Astfel, daca este egalitate, scorul va fi de avantaj pentru cel care castiga urmatorul punct. Si aici sunt doua situatii: daca cel care este in avantaj castiga si urmatorul punct, atunci este ghem pentru el, daca adversarul va castiga punctul ce urmeaza se trece din nou in starea de egalitate.</string>
    <string name="reguliBaschet">
        In general, in jocul de baschet sunt 2 echipe formate din cate 5 jucatori fiecare. De asemenea, fiecare echipa are si 5 rezerve.

Deoarece sunt putini jucatori pe teren sunt anumite pozitii baschet care pot fi usor de memorat si anume:

 – conducatorul de joc – ele este creierul echipei, cel care se afla in centru, incepe jocul si coordoneaza;

 – cel mai bun aruncator – acesta sta aproape de linia laterala, fiind cel care inscrie cosuri de 3 puncte;

 – cel mai bun jucator – care se poate plia pe mai multe posturi, fiind si pentru aruncari de 3 puncte si pentru cele din careul adversarilor;

 – cel mai tehnic – marcheaza de obicei aproape de cos, fiind cel mai adesea pozitionat sub panou;

 – centru – se alege in general cel mai inalt si mai puternic jucator din echipa, ce apara propriul cos.

Inlocuirile se pot face foarte usor, dar permanent trebuie sa fie doar 5 jucatori pe teren. Cel care intra in joc trebuie sa o faca doar prin terenul propriu, cel care paraseste suprafata o poate face pe oriunde. Un jucator inlocuit poate sa reintre dupa o perioada de timp, in functie de decizia antrenorului.

Cu siguranta, daca nu joci in competitii, ci doar pentru destindere, poti sa formezi si echipe mai mici, dar sunt si jocuri in doi, de unu la unu, pe care le poti juca si la un singur cos.
        Valoare cosurilor nu este egala, in baschet, reguli stricte marcheaza fiecare pozitie si numarul de puncte alocat. Astfel sunt:

 – cosuri care aduc 1 punct echipei – inscrise din aruncare libera;

 – cosuri care aduc 2 puncte echipei – ce sunt inscrise in semicerc;

 – cosuri de 3 puncte pentru echipa – sunt cele marcate din afara semicercului.

De asemenea, daca in timpul jocului un jucator inscrie in mod accidental in cosul echipei proprii, se aduna 2 puncte pentru echipa adversa si acest cos se trece la capitanul echipei adverse. Daca se marcheaza in propriul cos cu buna stiinta, acesta nu este luat in seama de arbitri.

Sunt mai multe stiluri de aruncari libere si fiecare isi poate alege cea mai buna varianta pentru el: cu ambele maini de jos, cu mainile de la piept, regula mainii drepte ce pleaca de la umar, fiind o aruncare clasica etc.
        In baschet sunt numeroase reguli si in continuare amintim cateva dintre ele care sunt cele mai uzuale precum:

Regula pasilor – pivotarea este miscarea cu un picior fix ce are rol de pivot, in timp ce celalat se misca pentru a cauta o pozitie buna pentru aruncare sau un coechipier liber. Daca jucatorul prinde mingea in timp ce este in miscare sau dupa ce a terminat driblingul, mai poate face doi pasi pana sa arunce mingea sau sa se opreasca.

Daca sare cu ambele picioare atunci trebuie sa elibereze mingea inainte ca unul dintre picioare sa atinga solul. La plecarea de pe loc, pasii sunt contorizati, iar pivotul poate fi pe oricare dintre picioare daca din saritura aterizeaza pe amandoua, sau doar pe piciorul care aterizeaza primul, dupa caz.

Regula 3 secunde – cand echipa detine mingea, un jucator nu poate ramane mai mult de 3 secunde in zona restrictivă.

Joc 5 secunde – jucatorul nu poate tine mingea mai mult de 5 secunde in maini, dupa care trebuie sa intreprinda o miscare.

Regula 8 secunde – dupa o repunere sau daca recastiga mingea, echipa are 8 secunde pana sa o treaca in terenul advers.

Regula 24 secunde – din momentul in care mingea intra in posesia unei echipe, fie in urma recastigarii, fie dupa o repunere, aceasta are 24 de secunde pentru a face o aruncare la cosul de baschet din terenul advers.

Mingea nu mai poate fi intoarsa in propriul teren de catre o echipa ce a trecut la atac. Sunt de asemenea diverse greseli ce se sanctioneaza, atat de jucator, cat si de echipa.
    </string>
    <string name="nu_exista_terenuri">Nu exista terenuri!</string>
    <string name="reguliVolei">Voleiul este un sport în care două echipe, separate de un fileu înalt, trebuie să treacă o minge pe deasupra acestuia, folosind doar mâinile, cu scopul de a face ca mingea să atingă terenul advers. Fiecărei echipe îi sunt permise doar trei loviri pentru a trimite mingea către terenul celeilalte echipe. Un punct se câștigă dacă mingea atinge terenul advers sau dacă nu se respectă regula celor trei atingeri.  O echipa de volei este alcătuită din 6 jucători. Se joacă 3 seturi câștigătoare din 5, fiecare set a câte 25 de puncte; în caz de egalitate la scorul 24 - 24 se continuă setul până în momentul în care una din cele două echipe obține o diferență de 2 puncte (29 - 27, 31 - 29 etc). În cazul în care este nevoie de jucarea ultimului set pentru desemnarea câștigătorului, acesta se joacă până la 15 (sau până la o diferență de două puncte).</string>
    <string name="reguliHandbal">Handbalul este un sport de echipă care se joacă cu o minge, folosindu-se numai mâinile. Meciul are loc între două echipe a 7 jucători (6 jucători de câmp și un portar) pe durata a două reprize a câte 30 de minute. Scopul jocului este de a marca cât mai multe goluri în poarta echipei adverse. Echipa care a marcat mai multe goluri câștigă meciul.</string>
</resources>