<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/border"
        android:weightSum="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pozaTeren"
            android:contentDescription="@string/imagineTeren"
            android:layout_weight="3"
            android:clickable="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nume"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_nume_teren"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/adresa"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_adresa_teren"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/border"/>


            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rezerva_teren"
                android:id="@+id/btn_inchiriaza"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>