<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:text="@string/rezervari_active"
            android:id="@+id/tv_rezervari_active"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/rv_rezervari_terenuri_active"
            app:layout_constraintTop_toBottomOf="@+id/tv_rezervari_active"
            android:paddingBottom="65dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_rezervari_terenuri_active"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:text="@string/rezervari_anulate"
            android:id="@+id/tv_rezervari_anulate"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/rv_rezervari_terenuri_anulate"
            app:layout_constraintTop_toBottomOf="@+id/tv_rezervari_anulate"
            android:paddingBottom="65dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_rezervari_terenuri_anulate"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:text="@string/rezervari_trecute"
            android:id="@+id/tv_rezervari_trecute"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/rv_rezervari_terenuri_trecute"
            app:layout_constraintTop_toBottomOf="@+id/tv_rezervari_trecute"
            android:paddingBottom="65dp"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>